--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -54,6 +54,17 @@
           <td>{{ p.quantity}}</td>
           <td>{{ p.selected}}</td>
           <td>{{ p.available }}</td>
+          <td>
+            <button (click)="onSelect(p)" [ngClass]="p.selected ? 'btn btn-sm btn-success': 'btn btn-sm btn-danger'">
+              <span *ngIf="p.selected">Unselected</span>
+              <span *ngIf="!p.selected">Selected</span>
+            </button>
+          </td>
+          <td>
+            <button class="btn btn-sm btn-danger" (click)="onDelete(p)">
+              <span class="fa fa-trash-o"></span>
+            </button>
+          </td>
         </tr>
         </tbody>
       </table>
