--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,30 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-light navbar-light">
-  <ul class="navbar navbar-nav">
-    <li>
-      <button (click)="onGetAllProducts()" class="btn btn-sm btn-outline-info ml-2">All</button>
-    </li>
-    <li>
-      <button (click)="onGetSelectedProducts()" class="btn btn-sm btn-outline-info ml-2">Selected</button>
-    </li>
-    <li>
-      <button (click)="onGetAvailableProducts()" class="btn btn-sm btn-outline-info ml-2">Available</button>
-    </li>
-    <li>
-      <button (click)="onGetNewProduct()" class="btn btn-sm btn-outline-info ml-2">New Product</button>
-    </li>
-  </ul>
-  <ul class="navbar navbar-nav ml-auto">
-    <li>
-      <form class="form-inline" #f ="ngForm" (ngSubmit)="onSearch(f.value)">
-        <div class="form-group">
-          <input class="form-check-input" ngModel name="keyword" type="text">
-          <button class="btn btn-sm btn-info"><span class="fa fa-search"></span></button>
-        </div>
-      </form>
-    </li>
-  </ul>
-</nav>
-
+<app-product-nav-bar (productEventEmitter)="onActionEvent($event)"></app-product-nav-bar>
 <div class="container">
   <ng-container *ngIf="(products$ | async) as result" [ngSwitch]="result.dataState">
     <ng-container *ngSwitchCase="DataStateEnum.LOADING">
