--- a/src/app/components/products/product-list/product-list.component.html
+++ b/src/app/components/products/product-list/product-list.component.html
@@ -1,1 +1,57 @@
-<p>product-list works!</p>
+<div class="container">
+  <ng-container *ngIf="(productsInput$ | async) as result" [ngSwitch]="result.dataState">
+    <ng-container *ngSwitchCase="DataStateEnum.LOADING">
+      Loading...
+    </ng-container>
+    <ng-container *ngSwitchCase="DataStateEnum.ERROR">
+      <div class="col-12 text-center">
+        <div class="alert alert-danger">
+          {{ result.errorMessage }}
+        </div>
+      </div>
+    </ng-container>
+    <ng-container *ngSwitchCase="DataStateEnum.LOADED">
+      <table class="table">
+        <thead>
+        <tr>
+          <th>ID</th>
+          <th>Name</th>
+          <th>Price</th>
+          <th>Quantity</th>
+          <th>Selected</th>
+          <th>Available</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let p of result.data">
+          <td>{{ p.id }}</td>
+          <td>{{ p.name}}</td>
+          <td>{{ p.price }}</td>
+          <td>{{ p.quantity}}</td>
+          <td>{{ p.selected}}</td>
+          <td>{{ p.available }}</td>
+          <td>
+            <button (click)="onSelect(p)" [ngClass]="p.selected ? 'btn btn-sm btn-success': 'btn btn-sm btn-danger'">
+              <span *ngIf="p.selected">Unselected</span>
+              <span *ngIf="!p.selected">Selected</span>
+            </button>
+          </td>
+          <td>
+            <button class="btn btn-sm btn-danger" (click)="onDelete(p)">
+              <span class="fa fa-trash-o"></span>
+            </button>
+          </td>
+          <td>
+            <button class="btn btn-sm btn-warning" (click)="onEdit(p)">
+              <span class="fa fa-edit"></span>
+            </button>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </ng-container>
+  </ng-container>
+</div>
+
+
+
