--- a/src/app/components/products/product-list/product-list.component.html
+++ b/src/app/components/products/product-list/product-list.component.html
@@ -22,32 +22,7 @@
           <th>Available</th>
         </tr>
         </thead>
-        <tbody>
-        <tr *ngFor="let p of result.data">
-          <td>{{ p.id }}</td>
-          <td>{{ p.name}}</td>
-          <td>{{ p.price }}</td>
-          <td>{{ p.quantity}}</td>
-          <td>{{ p.selected}}</td>
-          <td>{{ p.available }}</td>
-          <td>
-            <button (click)="onSelect(p)" [ngClass]="p.selected ? 'btn btn-sm btn-success': 'btn btn-sm btn-danger'">
-              <span *ngIf="p.selected">Unselected</span>
-              <span *ngIf="!p.selected">Selected</span>
-            </button>
-          </td>
-          <td>
-            <button class="btn btn-sm btn-danger" (click)="onDelete(p)">
-              <span class="fa fa-trash-o"></span>
-            </button>
-          </td>
-          <td>
-            <button class="btn btn-sm btn-warning" (click)="onEdit(p)">
-              <span class="fa fa-edit"></span>
-            </button>
-          </td>
-        </tr>
-        </tbody>
+        <app-product-item [productInput]="p" (productEventEmitter)="onActionEvent($event)" *ngFor="let p of result.data" style="display: contents"></app-product-item>
       </table>
     </ng-container>
   </ng-container>
