--- a/src/app/components/products/product-list/product-list.component.html
+++ b/src/app/components/products/product-list/product-list.component.html
@@ -22,7 +22,7 @@
           <th>Available</th>
         </tr>
         </thead>
-        <app-product-item [productInput]="p" (productEventEmitter)="onActionEvent($event)" *ngFor="let p of result.data" style="display: contents"></app-product-item>
+        <app-product-item [productInput]="p"  *ngFor="let p of result.data" style="display: contents"></app-product-item>
       </table>
     </ng-container>
   </ng-container>
