--- a/src/app/components/products/product-nav-bar/product-nav-bar.component.html
+++ b/src/app/components/products/product-nav-bar/product-nav-bar.component.html
@@ -1,8 +1,18 @@
-<ul class="nav nav-pills">
-  <li>
-    <button class="btn btn-outline-info" (click)="onGetAllProducts()">All</button>
-  </li>
-  <li>
-    <button class="btn btn-outline-info ml-2" (click)="onGetSelectedProducts()">Selected</button>
-  </li>
-</ul>
+<nav class="navbar navbar-expand-sm bg-light navbar-dark">
+ <ul class="navbar navbar-nav">
+   <li>
+     <button class="btn btn-sm btn-outline-info" (click)="onGetAllProducts()">All</button>
+   </li>
+   <li>
+     <button class="btn btn-sm btn-outline-info ml-2" (click)="onGetSelectedProducts()">Selected</button>
+   </li>
+ </ul>
+  <ul class="navbar navbar-nav ml-auto">
+    <li>
+      <form #f="ngForm" (ngSubmit)="onSearch(f.value)" class="form-inline">
+          <input type="text" ngModel name="keyword">
+        <button type="submit" class="btn btn-sm btn-info"><i class="fa fa-search"></i></button>
+      </form>
+    </li>
+  </ul>
+</nav>
